<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author">Michael Mowry</string>
    <string name="app_name">Make Disciples</string>
    <string name="chk_godTime">God Time</string>
    <string name="chk_mentorMeeting">Mentor Meeting</string>
    <string name="chk_bibleStudy">Bible Study</string>
    <string name="chk_campusGroup">Campus Group</string>
    <string name="chk_localChurch">Local Church</string>
    <string name="btn_display">Display</string>
</resources>
