<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeekByWeek">
    <CheckBox
        android:id="@+id/chkGodTime"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="@string/chk_godTime" />

    <CheckBox
        android:id="@+id/chkMentorMeeting"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/chk_mentorMeeting" />

    <CheckBox
        android:id="@+id/chkBibleStudy"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/chk_bibleStudy" />

    <CheckBox
        android:id="@+id/chkCampusGroup"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/chk_campusGroup" />

    <CheckBox
        android:id="@+id/chkLocalChurch"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/chk_localChurch" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_display" />

</LinearLayout>